Add sample based on JDK 16 Foreign Linker API/Foreign Memory Access API